[UPDATE]: tmux status bar and history size updated, usefull shortcuts added

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,14 +9,50 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# prefix + [ : enter vi mode
-# prefix + c : create new window
-# prefix + % : split vertical
-# prefix + " : split
-# prefix + , : rename
-# prefix + d : detach
-# prefix + z : zoom split
+# increase history limit
+set-option -g history-limit 10000
 
+# status bar style
+set-option -g status-style fg=colour12,bg=colour235
+set-option -g status-left "#[fg=colour235,bg=colour12][#S]#[fg=default,bg=default] "
+set-option -g status-left-length 20
+set-option -g status-right " #[fg=colour235,bg=colour12]%Y-%m-%d-%A"
+
+# entering copy-mode (vi mode)
+bind C-v copy-mode # [
+
+# bind split-window keys
+bind | split-window -h -c "#{pane_current_path}" # %
+bind - split-window -v -c "#{pane_current_path}" # "
+
+# prefix + C-v			: enter vi mode
+# prefix + |			: split vertical
+# prefix + -			: split horizontal
+# prefix + q			: show pane numbers, press number to select
+
+# prefix + c			: create new window
+# prefix + p			: prev window
+# prefix + n			: next window
+# prefix + w			: show windows list
+# prefix + <number>		: open <number>. windows
+
+# prefix + d			: exit
+# prefix + x			: kill pane with confirm
+
+# prefix + z			: zoom in/out  pane
+# prefix + ,			: rename pane
+# prefix + {			: rotate panes
+# prefix + Ctrl-<ArrowKeys>	: resize pane
+
+# prefix + space		: next layout
+# prefix + Alt-<number>		: select layout
+#				: 1 - vertical split, all panes same width
+#				: 2 - horizontal split, all panes same height
+#				: 3 - horizontal split, main pane on top, other panes on bottom, vertically split, all same width
+#				: 4 - vertical split, main pane left, other panes right, horizontally split, all same height
+#				: 5 - tile, new panes on bottom, same height before same width
+
+# tmux list-keys				: lists all key bindings
 # tmux ls					: show sessions
 # tmux attach -t <target-session> (-t 0)	: attach session
 # tmux kill-session -t <target-session>		: kill session
