[UPDATE]: bash prompt and tmux border-color. git aliases added

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,13 @@ set-option -g status-left "#[fg=colour235,bg=colour12][#S]#[fg=default,bg=defaul
 set-option -g status-left-length 20
 set-option -g status-right " #[fg=colour235,bg=colour12]%Y-%m-%d-%A"
 
+# pane dividing line color
+set-option -g pane-border-style bg=default
+set-option -g pane-active-border-style fg=colour12,bg=default
+
+# decrease repeating command time
+set-option -g repeat-time 275
+
 # entering copy-mode (vi mode)
 bind C-v copy-mode # [
 
