--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # increase history limit
-set-option -g history-limit 10000
+set-option -g history-limit 1000000
 
 # status bar style
 set-option -g status-style fg=colour12,bg=colour235
